--- a/src/app/modules/admin/modules/users/components/user/user.html
+++ b/src/app/modules/admin/modules/users/components/user/user.html
@@ -1,6 +1,6 @@
 <div class="component component-admin-user">
     <div class="form-wrapper">
-        <form id="form_user" class="form-user" method="post" action="">
+        <form id="form_user" class="form-user" method="post" action="" [formGroup]="component.formUser">
             <mat-card>
                 <mat-card-header>
                     <mat-card-title>New User</mat-card-title>
@@ -10,13 +10,13 @@
                     <div class="field-wrapper">
                         <mat-form-field appearance="outline">
                             <mat-label>Email</mat-label>
-                            <input type="email" id="email" name="email" class="field field-email" placeholder="Email" required matInput />
+                            <input type="email" id="email" name="email" class="field field-email" placeholder="Email" required matInput formControlName="email"/>
                         </mat-form-field>
                     </div><!-- .field-wrapper -->
                     <div class="field-wrapper">
                         <mat-form-field appearance="outline">
                             <mat-label>Password</mat-label>
-                            <input type="password" id="pw" name="pw" class="field field-pw" placeholder="Password" required matInput />
+                            <input type="password" id="pw" name="pw" class="field field-pw" placeholder="Password" required matInput formControlName="pw" />
                             <button type="button" id="btn_visibility" class="btn btn-visibility" title="Show Password" matSuffix mat-icon-button (click)="toggle_show_pw()">
                                 <mat-icon>visibility_off</mat-icon>
                             </button>
@@ -32,6 +32,8 @@
                     </button>
                 </mat-card-actions>
             </mat-card>
+
+            <input type="hidden" id="user_id" name="user_id" formControlName="user_id" />
         </form>
     </div><!-- .form-wrapper -->
 </div><!-- .component -->
