--- a/src/app/modules/tenant-selector/components/tenant-selector/tenant-selector.html
+++ b/src/app/modules/tenant-selector/components/tenant-selector/tenant-selector.html
@@ -36,12 +36,14 @@
                                     <td>Description</td>
                                 </tr>
                             </tfoot>
-                            <tbody>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                            <tbody formArrayName="matches">
+                                @for(t of matches.controls; track $index; let i = $index){ 
+                                <tr [formGroupName]="i">
+                                    <td><input type="checkbox" id="selected_{{ i }}" name="selected" title="Select" [value]="t.value.id" formControlName="selected" /></td>
+                                    <td>{{ t.value.name }}</td>
+                                    <td>{{ t.value.description }}</td>
                                 </tr>
+                                }
                             </tbody>
                         </table>
                     </div><!-- .matches -->
@@ -66,12 +68,14 @@
                                     <td>Description</td>
                                 </tr>
                             </tfoot>
-                            <tbody>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                            <tbody formArrayName="selected">
+                                @for(t of selected.controls; track $index; let i = $index){ 
+                                <tr [formGroupName]="i">
+                                    <td><input type="checkbox" id="selected_{{ i }}" name="selected" title="Select" [value]="t.value.id" formControlName="selected" /></td>
+                                    <td>{{ t.value.name }}</td>
+                                    <td>{{ t.value.description }}</td>
                                 </tr>
+                                }
                             </tbody>
                         </table>
                     </div><!-- .selected -->
