modify roles, users, and tenants module

--- a/src/app/modules/admin/components/layout/layout.html
+++ b/src/app/modules/admin/components/layout/layout.html
@@ -5,6 +5,7 @@
                 <ul>
                     <li><a title="Tenants" routerLink="/admin/tenants">Tenants</a></li>
                     <li><a title="Users" routerLink="/admin/users/">Users</a></li>
+                    <li><a title="Users" routerLink="/admin/roles/">Roles</a></li>
                 </ul>
             </nav>
         </mat-sidenav>
