modify tenant-admin module. modify admin roles component.

--- a/src/app/modules/admin/modules/tenants/components/layout/layout.html
+++ b/src/app/modules/admin/modules/tenants/components/layout/layout.html
@@ -5,7 +5,8 @@
                 <ul>
                     <li><a title="Dashboard" routerLink="/admin/tenants">Dashboard</a></li>
                     <li><a title="Tenants" routerLink="/admin/tenants/tenants">Tenants</a></li>
-                    <li><a title="Users" routerLink="/admin/tenants/users/">Users</a></li>
+                    <li><a title="Users" routerLink="/admin/tenants/users">Users</a></li>
+                    <li><a title="Roles" routerLink="/admin/tenants/roles">Roles</a></li>
                 </ul>
             </nav>
         </mat-sidenav>
