--- a/src/app/modules/tenant-admin/components/dashboard/dashboard.html
+++ b/src/app/modules/tenant-admin/components/dashboard/dashboard.html
@@ -1,1 +1,3 @@
-<p>dashboard works!</p>
+<div class="component component-tenant-admin-dashboard">
+    tenant-admin dashboard
+</div><!-- .component -->
