--- a/src/app/modules/admin/modules/tenants/components/roles/roles.html
+++ b/src/app/modules/admin/modules/tenants/components/roles/roles.html
@@ -1,61 +1,69 @@
 <div class="component component-admin-tenants-roles">
-    <div class="form-wrapper">
-        <form id="roles_form" class="form-roles" method="post" action="" [formGroup]="component.formRoles">
-            <mat-card>
-                <mat-card-header>
-                    <mat-card-title>Roles</mat-card-title>
-                </mat-card-header>
-                <mat-card-actions formGroupName="filters">
-                    <mat-toolbar>
-                        <a id="a_role_new" class="btn btn-role-new" title="New Role" routerLink="/admin/tenants/roles/new" mat-icon-button>
-                            <mat-icon>new</mat-icon>
-                        </a>
-                        <button type="button" class="btn btn-tenant-select" title="Select Tenant" matFab extended>
-                            <mat-icon>domain</mat-icon>Default
-                        </button>
-                        <button type="button" class="btn btn-refresh" title="Refresh" mat-icon-button>
-                            <mat-icon>refresh</mat-icon>
-                        </button>
-                        <mat-form-field appearance="outline">
-                            <input type="search" id="filter_tenant" name="filter_tenant" class="filter filter-tenant" placeholder="Search" matInput formControlName="filter" />
-                            <button type="button" id="btn_search" name="btn_search" class="btn btn-search" matSuffix mat-icon-button>
-                                <mat-icon>search</mat-icon>
-                            </button>
-                        </mat-form-field>
-                    </mat-toolbar>
-                </mat-card-actions>
-                <mat-card-content>
-                    <div class="table-wrapper">
-                        <table class="tbl-roles">
-                            <caption>Roles</caption>
-                            <thead>
-                                <tr>
-                                    <th></th>
-                                    <th>Active</th>
-                                    <th>Name</th>
-                                    <th>Description</th>
-                                </tr>
-                            </thead>
-                            <tfoot>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                            </tfoot>
-                            <tbody>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div><!-- .table-wrapper -->
-                </mat-card-content>
-            </mat-card>
-        </form>
-    </div>
+    <mat-sidenav-container>
+        <mat-sidenav #nav_selectors mode="over" position="end" disableClose="true">
+            <app-tenant-selector #tenant_selector multiple="false" (tenants_selected)="on_tenants_selected($event)"></app-tenant-selector>
+            <app-user-selector #user_selector multiple="true"></app-user-selector>
+        </mat-sidenav>
+        <mat-sidenav-content>
+            <div class="form-wrapper">
+                <form id="roles_form" class="form-roles" method="post" action="" [formGroup]="component.formRoles">
+                    <mat-card>
+                        <mat-card-header>
+                            <mat-card-title>Roles</mat-card-title>
+                        </mat-card-header>
+                        <mat-card-actions formGroupName="filters">
+                            <mat-toolbar>
+                                <a id="a_role_new" class="btn btn-role-new" title="New Role" routerLink="/admin/tenants/roles/new" mat-icon-button>
+                                    <mat-icon>add_moderator</mat-icon>
+                                </a>
+                                <button type="button" class="btn btn-tenant-select" title="Select Tenant" matFab extended (click)="select_tenant()">
+                                    <mat-icon>domain</mat-icon>Default
+                                </button>
+                                <button type="button" class="btn btn-refresh" title="Refresh" mat-icon-button>
+                                    <mat-icon>refresh</mat-icon>
+                                </button>
+                                <mat-form-field appearance="outline">
+                                    <input type="search" id="filter_tenant" name="filter_tenant" class="filter filter-tenant" placeholder="Search" matInput formControlName="filter" />
+                                    <button type="button" id="btn_search" name="btn_search" class="btn btn-search" matSuffix mat-icon-button>
+                                        <mat-icon>search</mat-icon>
+                                    </button>
+                                </mat-form-field>
+                            </mat-toolbar>
+                        </mat-card-actions>
+                        <mat-card-content>
+                            <div class="table-wrapper">
+                                <table class="tbl-roles">
+                                    <caption>Roles</caption>
+                                    <thead>
+                                        <tr>
+                                            <th></th>
+                                            <th>Active</th>
+                                            <th>Name</th>
+                                            <th>Description</th>
+                                        </tr>
+                                    </thead>
+                                    <tfoot>
+                                        <tr>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                        </tr>
+                                    </tfoot>
+                                    <tbody>
+                                        <tr>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div><!-- .table-wrapper -->
+                        </mat-card-content>
+                    </mat-card>
+                </form>
+            </div><!-- .form-wrapper -->
+        </mat-sidenav-content>
+    </mat-sidenav-container>
 </div><!-- .component -->
