modify roles component

--- a/src/app/modules/admin/modules/roles/components/roles/roles.html
+++ b/src/app/modules/admin/modules/roles/components/roles/roles.html
@@ -2,6 +2,7 @@
     <mat-sidenav-container>
         <mat-sidenav #nav_start_roles mode="over" position="end" disableClose="true">
             <app-tenant-selector multiple="false"></app-tenant-selector>
+            <app-tenant-user-selector multiple="true"></app-tenant-user-selector>
         </mat-sidenav>
         <mat-sidenav-content>
             <div class="form-wrapper">
