--- a/src/app/modules/tenant-selector/components/tenant-selector/tenant-selector.html
+++ b/src/app/modules/tenant-selector/components/tenant-selector/tenant-selector.html
@@ -90,8 +90,8 @@
                     </div><!-- .selected -->
                 </mat-card-content>
                 <mat-card-actions>
-                    <button type="button" (click)="select()">
-                        Select
+                    <button type="button" id="btn_select" class="btn btn-select" title="Select" (click)="select()" matFab extended>
+                        <mat-icon>check_circle</mat-icon>Select
                     </button>
                 </mat-card-actions>
             </mat-card>
