--- a/src/app/modules/admin/modules/tenants/components/roles/roles.html
+++ b/src/app/modules/admin/modules/tenants/components/roles/roles.html
@@ -7,6 +7,9 @@
             @if(selection_mode() === SelectionModes.users){
             <app-tenant-user-selector multiple="true" (selected)="selected($event)"></app-tenant-user-selector>
             }
+            @if(selection_mode() === SelectionModes.permissions) {
+            <app-permission-selector multiple="true" (selected)="on_permissions_selected($event)"></app-permission-selector>
+            }
         </mat-sidenav>
         <mat-sidenav-content>
             <div class="form-wrapper">
@@ -59,7 +62,7 @@
                                     <caption>Roles</caption>
                                     <thead>
                                         <tr>
-                                            <th></th>
+                                            <th><input type="checkbox" id="select_all" name="select_all" class="field field-select-all" title="Select All" (click)="select_all()"/></th>
                                             <th>Active</th>
                                             <th>Name</th>
                                             <th>Description</th>
@@ -73,13 +76,15 @@
                                             <td></td>
                                         </tr>
                                     </tfoot>
-                                    <tbody>
-                                        <tr>
+                                    <tbody formArrayName="roles">
+                                        @for(r of roles.controls; track $index; let i = $index){
+                                        <tr [formGroupName]="i">
+                                            <td><input type="checkbox" id="selected_{{ i }}" name="selected" class="selected" title="select" [value]="r.value.id" formControlName="id" /></td>
                                             <td></td>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
+                                            <td><a class="link role-link" routerLink="/admin/tenant/roles/role/{{ r.value.id }}">{{ r.value.name }}</a></td>
+                                            <td>{{ r.value.description }}</td>
                                         </tr>
+                                        }
                                     </tbody>
                                 </table>
                             </div><!-- .table-wrapper -->
