--- a/src/app/modules/permission-selector/components/permission-selector/permission-selector.html
+++ b/src/app/modules/permission-selector/components/permission-selector/permission-selector.html
@@ -1,6 +1,6 @@
 <div class="component component-permission-selector">
     <div class="form-wrapper">
-        <form id="form_permission_selector" class="form-permission-selector" method="post" action="" [formGroup]="formPermissionSelector">
+        <form id="form_permission_selector" class="form-permission-selector" method="post" action="" [formGroup]="component.formPermissionSelector">
             <mat-card>
                 <mat-card-header>
                     <mat-card-title>Permissions</mat-card-title>
@@ -11,6 +11,12 @@
                         <mat-form-field appearance="outline">
                             <mat-label>Search</mat-label>
                             <input type="search" id="filter" name="filter" class="field field-filter" matInput formControlName="filter" />
+                            <button type="button" id="btn_reset" name="btn_reset" class="btn btn-reset" mat-icon-button matSuffix (click)="reset()">
+                                <mat-icon>reset</mat-icon>
+                            </button>
+                            <button type="button" id="btn_search" name="btn_reset" class="btn btn-search" mat-icon-button matSuffix (click)="search()">
+                                <mat-icon>search</mat-icon>
+                            </button>
                         </mat-form-field>
                     </div><!-- .filters -->
                     <div class="matches">
@@ -34,11 +40,17 @@
                             </tfoot>
                             <tbody formArrayName="matches">
                                 @for(m of matches.controls; track $index; let i = $index){
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                                <tr [formGroupName]="i">
+                                    <td>
+                                        <button type="button" class="btn btn-select" title="Select" matMiniFab (click)="select(m.value)">
+                                            <mat-icon>arrow_drop_down</mat-icon>
+                                        </button>
+                                    </td>
+                                    <td>
+                                        <pre></pre>
+                                    </td>
+                                    <td>{{ m.value.name }}</td>
+                                    <td>{{ m.value.description }}</td>
                                 </tr>
                                 }
                             </tbody>
@@ -63,20 +75,26 @@
                                     <td></td>
                                 </tr>
                             </tfoot>
-                            <tbody>
+                            <tbody formArrayName="selected">
+                                @for(s of selected.controls; track $index; let i = $index){
                                 <tr>
+                                    <td>
+                                        <button type="button" class="btn btn-deselect" title="Deselect" matMiniFab (click)="deselect(s.value, i)">
+                                            <mat-icon>arrow_drop_up</mat-icon>
+                                        </button>
+                                    </td>
                                     <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                                    <td>{{ s.value.name }}</td>
+                                    <td>{{ s.value.description }}</td>
                                 </tr>
+                                }
                             </tbody>
                         </table>
                     </div><!-- .selected -->
                 </mat-card-content>
                 <mat-card-actions>
-                    <button type="button" class="btn btn-selected">
-                        Select
+                    <button type="button" class="btn btn-selected" matFab extended (click)="permission_select()">
+                        <mat-icon>check_circle</mat-icon>Select
                     </button>
                 </mat-card-actions>
             </mat-card>
